// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateRangePicker date-range-picker-label Gitt at DateRangePickerLabel skal rendres Når den bare har default verdier Så rendres den med rikitg css classer og legend (label med eksplisitt format) 1`] = `
<legend
  class="datepicker__legend"
>
  <span
    class="datepicker__legend__label "
  >
    myLabel
  </span>
  <em
    class="datepicker__legend__sublabel"
  >
     (dd.mm.åååå)
  </em>
</legend>
`;

exports[`DateRangePicker date-range-picker-label Gitt at DateRangePickerLabel skal rendres Når den er required og har requiredLabel Så rendres den med rikitg legend (label med requiredLabel og eksplisitt format) 1`] = `
<legend
  class="datepicker__legend"
>
  <span
    class="datepicker__legend__label "
  >
    myLabel
  </span>
  <em
    class="datepicker__legend__sublabel"
  >
     MyRequiredLabel
  </em>
  <em
    class="datepicker__legend__sublabel"
  >
     (dd.mm.åååå)
  </em>
</legend>
`;

exports[`DateRangePicker date-range-picker-label Gitt at DateRangePickerLabel skal rendres Når den har english locale Så rendres den med riktig legend (riktig engelsk format) 1`] = `
<legend
  class="datepicker__legend"
>
  <span
    class="datepicker__legend__label "
  >
    myLabel
  </span>
  <em
    class="datepicker__legend__sublabel"
  >
     (dd.mm.yyyy)
  </em>
</legend>
`;

exports[`DateRangePicker date-range-picker-label Gitt at DateRangePickerLabel skal rendres Når den har english locale og optionalLabel Så rendres den med riktig legend (riktig engelsk format) 1`] = `
<legend
  class="datepicker__legend"
>
  <span
    class="datepicker__legend__label "
  >
    myLabel
  </span>
  <em
    class="datepicker__legend__sublabel"
  >
     (dd.mm.yyyy) MyOptionalLabel
  </em>
</legend>
`;

exports[`DateRangePicker date-range-picker-label Gitt at DateRangePickerLabel skal rendres Når den har helpButton Så rendres den med helpButton nederst 1`] = `
<legend
  class="datepicker__legend"
>
  <span
    class="datepicker__legend__label "
  >
    myLabel
  </span>
  <em
    class="datepicker__legend__sublabel"
  >
     (dd.mm.åååå)
  </em>
  <span
    class="helpButton"
  >
    helpButton
  </span>
</legend>
`;

exports[`DateRangePicker date-range-picker-label Gitt at DateRangePickerLabel skal rendres Når den har isLabelHidden Så rendres den med rikitg css classer 1`] = `
<legend
  class="datepicker__legend"
>
  <span
    class="datepicker__legend__label datepicker__legend__label--hidden"
  >
    myLabel
  </span>
  <em
    class="datepicker__legend__sublabel"
  >
     (dd.mm.åååå)
  </em>
</legend>
`;

exports[`DateRangePicker date-range-picker-label Gitt at DateRangePickerLabel skal rendres Når den har optionalLabel Så rendres den med rikitg legend (label med optionalLabel og eksplisitt format) 1`] = `
<legend
  class="datepicker__legend"
>
  <span
    class="datepicker__legend__label "
  >
    myLabel
  </span>
  <em
    class="datepicker__legend__sublabel"
  >
     (dd.mm.åååå) MyOptionalLabel
  </em>
</legend>
`;

exports[`DateRangePicker date-range-picker-label Gitt at DateRangePickerLabel skal rendres Når den har subLabel Så rendres den med subLabel nederst i legenden 1`] = `
<legend
  class="datepicker__legend"
>
  <span
    class="datepicker__legend__label "
  >
    myLabel
  </span>
  <em
    class="datepicker__legend__sublabel"
  >
     (dd.mm.åååå)
  </em>
  <span
    class="label__sublabel"
  >
    <span
      class="subLabel"
    >
      subLabel
    </span>
  </span>
</legend>
`;
